--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,21 @@
-@{
-    ViewData["Title"] = "Home Page";
-}
-<h1>Default Blank Page~</h1>
-<p>Get to adding stuff</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
+    @{ViewData["Title"] = "Hackatwitchthon";}
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+    <div id="wrapper">
+    <h1>Welcome! lets Play a game!</h1>
+    <br>
+    <img src="/images/letsPlay.jpg" alt="lets play" style="width:304px;height:328px;">
+    <br>
+    <br>
+    <br>
+    <form action=""></form>
+    <button style="width: 200px;">let's play</button>
+    </div>
+</body>
+</html>
