added route to Template.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,8 +14,9 @@
     <br>
     <br>
     <br>
-    <form action=""></form>
+    <form action="Template" method="post">
     <button style="width: 200px;">let's play</button>
+    </form>
     </div>
 </body>
 </html>
